final fixes after Johannes read-through

--- a/CMS.tex
+++ b/CMS.tex
@@ -1,4 +1,4 @@
-Located at one of the four intersections of the LHC beams, the CMS detector is designed to measure the resulting collisions to high precision~\cite{CMS}. It's key features are the precise determination of the properties of single particles as well as a good coverage of the 4$\pi$ solid angle. The central element of the CMS detector is a superconducting solenoid. Cooled to $\unit{4.45}{\kelvin}$, it is able to produce a homogeneous magnetic field of $\unit{3.8}{\tesla}$, which allows to measure the momentum of charged particle by bending their trajectories. As shown in Figure~\ref{fig:CMS}, the different components of the detector are layered in cylindrical shapes around the interaction point. The magnet encompasses most of the main subdetectors, namely the tracking system which measures the trajectories of charged particles and the electromagnetic and hadron calorimeters, designed to measure the energy of particles. Located outside of the volume of the solenoid are the iron return yoke and muon detectors. This cylindrical structure is complemented on both sides by endcaps, which close the solid angle in the direction of the beams and are partly located outside the volume of the solenoid. The different components are described in more detail in the following. 
+Located at one of the four intersections of the LHC beams, the CMS detector is designed to measure the resulting collisions to high precision~\cite{CMS}. It's key features are the precise determination of the properties of single particles as well as a good coverage of the 4$\pi$ solid angle. The central element of the CMS detector is a superconducting solenoid. Cooled to $\unit{4.45}{\kelvin}$, it is able to produce a homogeneous magnetic field of $\unit{3.8}{\tesla}$, which allows to measure the momenta of charged particles by bending their trajectories. As shown in Figure~\ref{fig:CMS}, the different components of the detector are layered in cylindrical shapes around the interaction point. The magnet encompasses most of the main subdetectors, namely the tracking system which measures the trajectories of charged particles and the electromagnetic and hadron calorimeters, designed to measure the energy of particles. Located outside of the volume of the solenoid are the iron return yoke and muon detectors. This cylindrical structure is complemented on both sides by endcaps, which close the solid angle in the direction of the beams and are partly located outside the volume of the solenoid. The different components are described in more detail in the following. 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.8\textwidth]{plots/CMS/cms_design.png}
