--- a/ana.tex
+++ b/ana.tex
@@ -183,7 +183,7 @@ The second part consists of all further analysis performed on the events selecte
 
 \subsection{Primary datasets}
 
-Events are sorted into different primary datasets based on the HLT decisions, grouping together events accepted by related triggers. As this allows for events to appear in several of theses datasets, precautions against double counting have to taken when combining different data streams in one analysis. The primary datasets most relevant to this analysis are \verb+DoubleElectron+, \verb+DoubleMu+, and \verb+MuEG+, containing, amongst others, events triggered by the different dilepton triggers. As auxiliary datasets, events from primary datasets triggered by \HT (\verb+HT+, \verb+JetHT+), single leptons (\verb+SingleElectron+, \verb+SingleMu+), and $\alpha_\mathrm{T}$ (\verb+HT+, \verb+HTMHT+) are used (see Section~\ref{sec:trigger}). Each primary dataset is split into four subsets, labelled \verb+Run2012A+ to \verb+Run2012D+, each run defined by the run period of the LHC between two technical stops. The primary datasets are summarised in Table~\ref{tab:datasets}, where also the dataset paths by which the samples can be accessed in the CMS bookkeeping system (DBS)~\cite{1742-6596-119-7-072001} is given.   
+Events are sorted into different primary datasets based on the HLT decisions, grouping together events accepted by related triggers. As this allows for events to appear in several of theses datasets, precautions against double counting have to be taken when combining different data streams in one analysis. The primary datasets most relevant to this analysis are \verb+DoubleElectron+, \verb+DoubleMu+, and \verb+MuEG+, containing, amongst others, events triggered by the different dilepton triggers. As auxiliary datasets, events from primary datasets triggered by \HT (\verb+HT+, \verb+JetHT+), single leptons (\verb+SingleElectron+, \verb+SingleMu+), and $\alpha_\mathrm{T}$ (\verb+HT+, \verb+HTMHT+) are used (see Section~\ref{sec:trigger}). Each primary dataset is split into four subsets, labelled \verb+Run2012A+ to \verb+Run2012D+, each run defined by the run period of the LHC between two technical stops. The primary datasets are summarised in Table~\ref{tab:datasets}, where also the dataset paths by which the samples can be accessed in the CMS bookkeeping system (DBS)~\cite{1742-6596-119-7-072001} is given.   
 
 \begin{table}
 
@@ -345,7 +345,7 @@ For simulated signals used in the analysis, initial squark pair production is si
 \label{sec:eventsel}
 A series of selection criteria are applied to the events to select signal-like topologies and reduce the contributions from SM backgrounds to the final sample. Also, requirements are defined to select control regions enriched in certain SM processes for the purpose of background prediction and the validation of methods. Additionally, events are rejected that exhibit signs of detector noise or are otherwise not suited for analysis. 
 
-The event selection has largely been defined before looking at the observed data in the signal region. A three points in time, data has been ``unblinded'', accessing first data corresponding to about 5\,$\mathrm{fb^{-1}}$, then increasing this sample to about 9\,$\mathrm{fb^{-1}}$, and finally using the full dataset in the analysis. After the first two steps, some changes to the event selection have been made to on the one hand synchronize the approaches of two teams of analysts and on the other hand reject phase space where more detailed studies revealed potential problems for the background estimation methods. Non of these changes significantly changed the outcome of the analysis and no additional phase space has been added to the signal region on both occasions. The event selection and analysis methods have been fully fixed before analysing the second half of the dataset and have not been changed afterwards. 
+The event selection has largely been defined before looking at the observed data in the signal region. At three points in time, data has been ``unblinded'', accessing first data corresponding to about 5\,$\mathrm{fb^{-1}}$, then increasing this sample to about 9\,$\mathrm{fb^{-1}}$, and finally using the full dataset in the analysis. After the first two steps, some changes to the event selection have been made to on the one hand synchronize the approaches of two teams of analysts and on the other hand reject phase space where more detailed studies revealed potential problems for the background estimation methods. Non of these changes significantly changed the outcome of the analysis and no additional phase space has been added to the signal region on both occasions. The event selection and analysis methods have been fully fixed before analysing the second half of the dataset and have not been changed afterwards. 
 
 \subsection{Event cleaning}
 As a first step in the selection of reconstructed events, a series of quality requirements is applied. 
@@ -355,7 +355,7 @@ To reject non-collision events, vertex information is used. The presence of at l
 \begin{equation}
 n_{dof} = -3 + 2 \sum\limits_{i=1}^{N_{\text{associated tracks}}} w_i,
 \end{equation}
-where the $w_i$ are weights assigned to each track based on the likelihood that it is correctly associated with the vertex, is required to be greater than four  
+where the $w_i$ are weights assigned to each track based on the likelihood that it is correctly associated with the vertex, is required to be greater than four.  
 
 As it relies on the balance of all reconstructed objects, \MET is especially sensitive to detector noise or particles not originating from the proton-proton collisions, which affect the event reconstruction. Several sources of these effects have been identified during the data taking and filters have been developed in CMS to reject events matching their signatures~\cite{CMS-PAS-JME-12-002}. This includes filters for signal produced by interactions of the beam with gas molecules in the beam pipe or of protons in the beam halo with the LHC infrastructure, anomalous noise in the HCAL or ECAL, dead ECAL cells, calibration lasers mistakenly firing during collision events, or failures of the tracking algorithms. The effect of these filters on the tails of the \MET distribution in dijet events is shown in Figure~\ref{fig:METFilters}. Events with \MET larger than $\unit{300}{\giga\electronvolt}$ are dominantly rejected by the filters, greatly improving the agreement between the data and simulation.
 \begin{figure}[h]
@@ -371,7 +371,7 @@ As it relies on the balance of all reconstructed objects, \MET is especially sen
 \label{sec:inclusiveSelection}
 In the inclusive dilepton selection, events are selected containing two isolated electrons or muons with opposite electric charge, \pt larger than $\unit{20}{\giga\electronvolt}$, and $|\eta|$ smaller than 2.4. Leptons with $1.4 < \abs{\eta} < 1.6$ are rejected and the event sample is divided into events where both leptons have $\abs{\eta} < 1.4$ (central) and events where at least one lepton has $\abs{\eta} > 1.6$ (forward). The dilepton invariant mass is required to be larger than $\unit{20}{\giga\electronvolt}$ and the two leptons are required to be separated by more than $\Delta R (\ell\ell) = 0.3$. In the signal selection, only events with two same flavour (SF) leptons are considered. Events with opposite flavour (OF) leptons are used to estimate SM backgrounds. These selection requirements are motivated in the following. A summary of this selection and other selection requirements defined in this section is given in Table~\ref{tab:selections}.
 
-The choice of the isolation requirement of $\frac{\text{Iso}}{\pt}< 0.15$ is illustrated in Figure~\ref{fig:isolation} (left), where the distribution of the relative isolation is shown for the trailing lepton in \ttbar simulation in the inclusive dilepton selection. Using the truth information of the simulation the sample is split into prompt leptons originating from \W boson decays, leptons originating from heavy flavour hadron decays inside b-quark jets, and jets misreconstructed as leptons. The prompt leptons are concentrated at very low values, but a long tail extends to much higher values. The leptons from heavy flavour decays are less well isolated, with a broad maximum of the distribution between 0.5 and 1. Misreconstructed leptons are spread more evenly between high and low values of isolation. The cut value of 0.15 allows for a strong suppression of non-prompt leptons while a high efficiency is retained for prompt leptons. The isolation efficiency as a function of the number of reconstructed vertices is shown on the right side of Figure~\ref{fig:isolation} separately for prompt electrons and muons in \ttbar and \zjets events. The efficiency in \zjets evens is about 5 percentage points higher compared to the more hadronic environment of \ttbar events. While the efficiency for electrons shows only a slight dependency on the number of vertices and therefore on the amount of pileup, for muons a more strong decrease of efficiency is observed for high numbers of vertices. However, for \ttbar events this is much less pronounced, as the efficiency is already diminished by the higher number of jets in this environment. The good separation of prompt and non-prompt leptons and the high efficiency for prompt leptons are therefore  retained even in the challenging conditions of high pileup. 
+The choice of the isolation requirement of $\frac{\text{Iso}}{\pt}< 0.15$ is illustrated in Figure~\ref{fig:isolation} (left), where the distribution of the relative isolation is shown for the trailing lepton in \ttbar simulation in the inclusive dilepton selection. Using the truth information of the simulation the sample is split into prompt leptons originating from \W boson decays, leptons originating from heavy flavour hadron decays inside b-quark jets, and jets misreconstructed as leptons. The prompt leptons are concentrated at very low values, but a long tail extends to much higher values. The leptons from heavy flavour decays are less well isolated, with a broad maximum of the distribution between 0.5 and 1. Misreconstructed leptons are spread more evenly between high and low values of isolation. The cut value of 0.15 allows for a strong suppression of non-prompt leptons while a high efficiency is retained for prompt leptons. The isolation efficiency as a function of the number of reconstructed vertices is shown on the right side of Figure~\ref{fig:isolation} separately for prompt electrons and muons in \ttbar and \zjets events. The efficiency in \zjets events is about 5 percentage points higher compared to the more hadronic environment of \ttbar events. While the efficiency for electrons shows only a slight dependency on the number of vertices and therefore on the amount of pileup, for muons a more strong decrease of efficiency is observed for high numbers of vertices. However, for \ttbar events this is much less pronounced, as the efficiency is already diminished by the higher number of jets in this environment. The good separation of prompt and non-prompt leptons and the high efficiency for prompt leptons are therefore  retained even in the challenging conditions of high pileup. 
 
 \begin{figure}[htbp]
 \centering
@@ -427,7 +427,7 @@ To study lepton pairs produced via the Drell-Yan process and to obtain a high st
 \label{fig:sigRegionBG}
 \end{figure}  
   
-For comparison the same distributions are shown for two signal points from the models discussed in Section~\ref{sec:models} in Figure~\ref{fig:sigRegionSignal}. On the left a point from the fixed-edge model with $m_{\sbottom} = \unit{550}{\giga\electronvolt}$ and $m_{\secondchi} = \unit{275}{\giga\electronvolt}$ and on the right a point from the slepton-edge model with $m_{\sbottom} = \unit{500}{\giga\electronvolt}$ and $m_{\secondchi} = \unit{175}{\giga\electronvolt}$ is shown. For both signal points almost no events are observed with $\njets < 2$, which is expected because at least two b-jets are produced in each event. Compared to the backgrounds, a clear tendency towards higher \MET and \njets is observed. However, also contributions to the two control regions are present, but they are small compared to the background contributions. Overall, the chosen selection offers a good separation of signal and backgrounds.
+For comparison, the same distributions are shown for two signal points from the models discussed in Section~\ref{sec:models} in Figure~\ref{fig:sigRegionSignal}. On the left a point from the fixed-edge model with $m_{\sbottom} = \unit{550}{\giga\electronvolt}$ and $m_{\secondchi} = \unit{275}{\giga\electronvolt}$ and on the right a point from the slepton-edge model with $m_{\sbottom} = \unit{500}{\giga\electronvolt}$ and $m_{\secondchi} = \unit{175}{\giga\electronvolt}$ is shown. For both signal points almost no events are observed with $\njets < 2$, which is expected because at least two b-jets are produced in each event. Compared to the backgrounds, a clear tendency towards higher \MET and \njets is observed. However, also contributions to the two control regions are present, but they are small compared to the background contributions. Overall, the chosen selection offers a good separation of signal and backgrounds.
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
@@ -470,11 +470,11 @@ For the shape analysis searching for edges in the \mll spectrum, the mass range 
  & $\mll > \unit{20}{\giga\electronvolt}$ \\
  & lepton $\abs{\eta} < 2.4$ excl. $1.4 < \abs{\eta} < 1.6$ \\ \hline
   \multirow{3}{*}{Drell--Yan control region} & inclusive dilepton selection \\
-	&  $\njets = 2$ \\
+	&  $\njets \geq 2$ \\
 	& $\MET < \unit{50}{\giga\electronvolt}$ \\ \hline
 	\multirow{3}{*}{Flav.-sym. control region} & inclusive dilepton selection \\	
-	&  $\njets \geq 2$ \\
-	& $\unit{50}{\giga\electronvolt} < \MET < \unit{100}{\giga\electronvolt}$ \\ \hline
+	&  $\njets = 2$ \\
+	& $\unit{100}{\giga\electronvolt} < \MET < \unit{150}{\giga\electronvolt}$ \\ \hline
 	\multirow{4}{*}{Signal region} & inclusive dilepton selection \\	
 	&  $\njets \geq 2$  and $\MET > \unit{150}{\giga\electronvolt}$ \\
 	& or \\
