--- a/background.tex
+++ b/background.tex
@@ -149,12 +149,12 @@ The turn-on of the triggers at low lepton \pt is of particular interest because 
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.45]{plots/BG/trigger/Triggereff_SingleLepton_HighHTExclusive_Full2012_TrailingPt_leadingPt30Single.pdf}
-\caption{Efficiency of the trailing lepton legs of the dilepton trigger measured on a sample of data events selected with single lepton triggers as a function of the \pt of the trailing lepton. The asymptotic efficiency with its statistical uncertainties are determined by fitting a constant in the range $\unit{\pt > 40}{\giga\electronvolt}$}
+\caption{Efficiency of the trailing lepton legs of the dilepton trigger measured on a sample of data events selected with single lepton triggers as a function of the \pt of the trailing lepton. The asymptotic efficiency with its statistical uncertainties are determined by fitting a constant in the range $\unit{\pt > 40}{\giga\electronvolt}$.}
 \label{fig:triggerEffTrailing}
 \end{center}
 \end{figure} 
 
-To assess the systematic uncertainties of the trigger efficiency measurement, the dependency of \RT, as used in the calculation of \Rsfof, on different observables is tested. Here a dataset triggered by $\alpha_\mathrm{T}$ triggers is used, as the \HT triggers do not provide enough events for these studies. The use of this triggers is motivated by the fact that they also rely on hadronic event properties and are therefore exhibit no significant correlation with the dilepton triggers, as is the case with the \HT triggers. This is illustrated on the right side of Figure~\ref{fig:triggerEffBias}, where the efficiencies measured using the $\alpha_{\mathrm{T}}$ triggers are compared to the true efficiency as a function of \mll. As $\alpha_{\mathrm{T}}$ is designed to suppress SM backgrounds, the available statistics for this test is low compared to the case of the \HT triggers. However, no significant deviation from unity is observed, which validates the use of the $\alpha_{\mathrm{T}}$ triggers for this studies.
+To assess the systematic uncertainties of the trigger efficiency measurement, the dependency of \RT, as used in the calculation of \Rsfof, on different observables is tested. Here a dataset triggered by $\alpha_\mathrm{T}$ triggers is used, as the \HT triggers do not provide enough events for these studies. The use of these triggers is motivated by the fact that they also rely on hadronic event properties and are therefore exhibit no significant correlation with the dilepton triggers, as is the case with the \HT triggers. This is illustrated on the right side of Figure~\ref{fig:triggerEffBias}, where the efficiencies measured using the $\alpha_{\mathrm{T}}$ triggers are compared to the true efficiency as a function of \mll. As $\alpha_{\mathrm{T}}$ is designed to suppress SM backgrounds, the available statistics for this test is low compared to the case of the \HT triggers. However, no significant deviation from unity is observed, which validates the use of the $\alpha_{\mathrm{T}}$ triggers for this studies.
 
 A 5\% systematic uncertainty is assigned to each trigger efficiency, resulting in an uncertainty of 6.4\% on \RT, covering all observed deviations from the measured value of \RT within the statistical uncertainties, as shown in Figure~\ref{fig:RTDependencies}. Studies of further variables can be found in Appendix~\ref{app:RT}. The mean \RT values displayed in the figures are obtained using the $\alpha_{\mathrm{T}}$ trigger as baseline and therefore differ from the nominal result obtained using the \HT triggers. 
 \begin{figure}[htbp]
