--- a/interpretation.tex
+++ b/interpretation.tex
@@ -62,9 +62,9 @@ where $\mu$ is the signal strength parameter, $\mu = 0$ corresponding to the bac
 \begin{equation*}
 \tilde{q_{\mu}} = -2 \ln\frac{\mathcal{L}\left(\text{data}|\mu,\hat{\theta}_\mu\right)}{\mathcal{L}\left(\text{data}|\hat{\mu},\hat{\theta}\right)},
 \end{equation*}
-where the $\hat{\theta}_\mu$ represent the maximum likelihood estimators for the nuisance parameters for a given $\mu$, whereas $\hat{\mu}$ and $\hat{\theta}$ indicate their values at the global maximum of the likelihood. The use of $\hat{\theta}_\mu$, $\hat{\mu}$, and $\hat{\theta}$ (known as profiling), instead of keeping them as free parameters of the likelihood, significantly reduces the the amount of pseudo-experiments needed in the sampling described below. For the parametrisation of the systematic uncertainties $p\left(\tilde{\theta}|\theta\right)$ in Equation~\ref{eq:like}, log-normal distributions are chosen, as they are go to 0 at $\theta = 0$, thus providing a more adequate description of positively defined properties compared to a Gaussian distribution. The distribution of the test statistic is then sampled dicing pseudo-experiments for $\mu > 0$ and $\mu = 0$, representing the $s+b$ and $b$ hypotheses that are tested. The p-values $p_{s+b}$ and $p_{b}$ are defined as the probability to obtain a value of the test statistics as large or larger than the one observed in data for the given hypothesis. To obtain the upper limit on the signal cross section the value of $\mu$ is chosen where $\mathrm{CL}_{\mathrm{s}} = \frac{p_{s+b}}{p_b}$ equals 0.05, corresponding to a 95\% confidence level (CL). In the calculation, all six bins of the counting experiment are combined by multiplying the likelihoods of the different channels. In this procedure, all uncertainties on both background and signal are assumed to be uncorrelated among each other but fully correlated among the different bins. Considered are all uncertainties summarized in Table~\ref{tab:sysUncerts} for the signal and in Table~\ref{tab:METresults2012} for the background.
+where the $\hat{\theta}_\mu$ represent the maximum likelihood estimators for the nuisance parameters for a given $\mu$, whereas $\hat{\mu}$ and $\hat{\theta}$ indicate their values at the global maximum of the likelihood. The use of $\hat{\theta}_\mu$, $\hat{\mu}$, and $\hat{\theta}$ (known as profiling), instead of keeping them as free parameters of the likelihood, significantly reduces the the amount of pseudo-experiments needed in the sampling described below. For the parametrisation of the systematic uncertainties $p\left(\tilde{\theta}|\theta\right)$ in Equation~\ref{eq:like}, log-normal distributions are chosen, as they go to 0 at $\theta = 0$, thus providing a more adequate description of positively defined properties compared to a Gaussian distribution. The distribution of the test statistic is then sampled dicing pseudo-experiments for $\mu > 0$ and $\mu = 0$, representing the $s+b$ and $b$ hypotheses that are tested. The p-values $p_{s+b}$ and $p_{b}$ are defined as the probability to obtain a value of the test statistics as large or larger than the one observed in data for the given hypothesis. To obtain the upper limit on the signal cross section the value of $\mu$ is chosen where $\mathrm{CL}_{\mathrm{s}} = \frac{p_{s+b}}{1-p_b}$ equals 0.05, corresponding to a 95\% confidence level (CL). In the calculation, all six bins of the counting experiment are combined by multiplying the likelihoods of the different channels. In this procedure, all uncertainties on both background and signal are assumed to be uncorrelated among each other but fully correlated among the different bins. Considered are all uncertainties summarized in Table~\ref{tab:sysUncerts} for the signal and in Table~\ref{tab:METresults2012} for the background.
 
-The resulting exclusion limits are shown in Figure~\ref{fig:limits}. The left plot shows the exclusion limit in the $m_{\sbottom}$-$m_{\secondchi}$ plane for the fixed-edge model. As this model is specifically tuned to provide signals consistent with the excess observed in the low-mass central signal region, the observed limit on $m_{\sbottom}$ deviates from the expected one by about $\unit{75}{\giga\electronvolt}$. Within the assumption of this model, \sbottom masses up to about $\unit{375}{\giga\electronvolt}$ are excluded, depending on the mass of the \secondchi. The right plot shows the limit for the slepton-edge model. Because of the much larger branching fraction into leptons in this model, higher masses can be excluded. The expected limit reaches \sbottom masses of about $\unit{600}{\giga\electronvolt}$ roughly independent of $m_{\secondchi}$, except for the region around $m_{\secondchi} = \unit{225}{\giga\electronvolt}$, where it drops below $\unit{550}{\giga\electronvolt}$, because of the gaps in acceptance discussed above. For lower $m_{\secondchi}$ the observed limit is significantly weaker than the expected, as here the \mll of the signal events is low because of the small mass difference between the neutralinos. Therefore, the limit is dominated by the low-mass signal region in which the excess has been observed. For higher $m_{\secondchi}$, the observed limit agrees with the expected within one standard deviation. The observed lower limit on $m_{\sbottom}$ ranges from $\unit{470}{\giga\electronvolt}$ to $\unit{590}{\giga\electronvolt}$, depending on $m_{\secondchi}$.
+The resulting exclusion limits are shown in Figure~\ref{fig:limits}. The left plot shows the exclusion limit in the $m_{\sbottom}$-$m_{\secondchi}$ plane for the fixed-edge model. As this model is specifically tuned to provide signals consistent with the excess observed in the low-mass central signal region, the observed limit on $m_{\sbottom}$ deviates from the expected one by about $\unit{75}{\giga\electronvolt}$. Within the assumption of this model, \sbottom masses up to about $\unit{365}{\giga\electronvolt}$ are excluded, depending on the mass of the \secondchi. The right plot shows the limit for the slepton-edge model. Because of the much larger branching fraction into leptons in this model, higher masses can be excluded. The expected limit reaches \sbottom masses of about $\unit{600}{\giga\electronvolt}$ roughly independent of $m_{\secondchi}$, except for the region around $m_{\secondchi} = \unit{225}{\giga\electronvolt}$, where it drops below $\unit{550}{\giga\electronvolt}$, because of the gaps in acceptance discussed above. For lower $m_{\secondchi}$ the observed limit is significantly weaker than the expected, as here the \mll of the signal events is low because of the small mass difference between the neutralinos. Therefore, the limit is dominated by the low-mass signal region in which the excess has been observed. For higher $m_{\secondchi}$, the observed limit agrees with the expected within one standard deviation. The observed lower limit on $m_{\sbottom}$ ranges from $\unit{470}{\giga\electronvolt}$ to $\unit{590}{\giga\electronvolt}$, depending on $m_{\secondchi}$.
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
